fix(dataset): :adhesive_bandage: fix overflow for tab with js

--- a/theme/less/components/tabs.less
+++ b/theme/less/components/tabs.less
@@ -89,6 +89,9 @@ You can use tabs from DSFR. It uses DSFR colors and conventions. It allows you t
 
 .fr-tabs--full-page {
     overflow: visible;
+    &[data-fr-js-tabs-group] {
+        overflow: hidden;
+    }
     & > .fr-tabs__panel {
         padding: 0;
         padding-top: 2.5rem;
